Updated git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,12 @@
 # ========================
 Fraud_Shield_AI
 
+# ========================
+# data
+# ========================
+data
+
+# ========================
+# Cache Files
+# ========================
+__pycache__
