--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,9 @@ data
 # Cache Files
 # ========================
 __pycache__
+
+
+# ========================
+# Models
+# ========================
+mlruns
